从系统读取token

--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
-    "\n",
     "import pandas as pd\n",
-    "\n",
-    "import tushare as ts"
+    "import tushare as ts\n",
+    "import sys"
    ]
   },
   {
@@ -19,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "token = 'c0641675f20fa1b0c0787235e132a60a1242a89bdf953952773d71e5'\n",
+    "token = sys.argv[1]\n",
     "\n",
     "pro = ts.pro_api(token)"
    ]
