--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -39,6 +39,7 @@
     "class stock_alert(object):\n",
     "    def __init__(self,stock_code):\n",
     "        self.stock_code = stock_code\n",
+    "        self.today = datetime.datetime.today().date()\n",
     "    \n",
     "    # 获取实时数据\n",
     "    def get_real_info(self):\n",
@@ -55,7 +56,7 @@
     "    def get_history_info(self):\n",
     "        real_info,data_real = self.get_real_info()\n",
     "        \n",
-    "        start_date = (today+datetime.timedelta(-500)).strftime('%Y%m%d')\n",
+    "        start_date = (self.today+datetime.timedelta(-500)).strftime('%Y%m%d')\n",
     "        end_date = ''.join(real_info['date'].split('-'))\n",
     "        df = ts.pro_bar(ts_code=self.stock_code, adj='qfq', start_date=start_date, end_date=end_date,ma=[5, 20, 50])\n",
     "        df['date'] = df['trade_date'].apply(lambda x:datetime.datetime.strptime(x,'%Y%m%d'))\n",
