change token to tushare_token

--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
-    "token = sys.argv[1]\n",
+    "tushare_token = sys.argv[1]\n",
     "\n",
-    "pro = ts.pro_api(token)"
+    "pro = ts.pro_api(tushare_token)"
    ]
   },
   {
