--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -14,11 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tushare_token = sys.argv[1]\n",
+    "# tushare_token = sys.argv[1]\n",
+    "tushare_token = 'c0641675f20fa1b0c0787235e132a60a1242a89bdf953952773d71e5'\n",
     "\n",
     "pro = ts.pro_api(tushare_token)"
    ]
