--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -14,12 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
     "# tushare_token = sys.argv[1]\n",
     "tushare_token = 'c0641675f20fa1b0c0787235e132a60a1242a89bdf953952773d71e5'\n",
+    "ts.set_token(tushare_token)\n",
     "\n",
     "pro = ts.pro_api(tushare_token)"
    ]
