--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -14,19 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tushare_token = sys.argv[1]\n",
-    "tushare_token = 'c0641675f20fa1b0c0787235e132a60a1242a89bdf953952773d71e5'\n",
+    "tushare_token = sys.argv[1]\n",
+    "# tushare_token = 'c0641675f20fa1b0c0787235e132a60a1242a89bdf953952773d71e5'\n",
     "ts.set_token(tushare_token)\n",
     "\n",
     "pro = ts.pro_api(tushare_token)"
@@ -117,97 +110,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 调用类"
+    "# 微信推送"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mystocks = ['300136.SZ','300618.SZ','300496.SZ','603019.SH','603611.SH','600446.SH','603799.SH','300348.SZ','300377.SZ']"
+    "wechatkey = sys.argv[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 284,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "        15:00:03: 信维通信(300136), 最新价43.35, 处于4线上方\n",
-      "        - 21日线:38.83, 最新价在此之上\n",
-      "        - 60日线: 41.66, 最新价在此之上\n",
-      "        - 21周线: 42.61, 最新价在此之上\n",
-      "        - 60周线: 35.19, 最新价在此之上\n",
-      "        \n",
-      "\n",
-      "        15:00:03: 寒锐钴业(300618), 最新价55.5, 处于1线上方\n",
-      "        - 21日线:49.04, 最新价在此之上\n",
-      "        - 60日线: 58.38, 最新价在此下方\n",
-      "        - 21周线: 65.24, 最新价在此下方\n",
-      "        - 60周线: 58.37, 最新价在此下方\n",
-      "        \n",
-      "\n",
-      "        15:00:03: 中科创达(300496), 最新价63.95, 处于4线上方\n",
-      "        - 21日线:57.10, 最新价在此之上\n",
-      "        - 60日线: 60.95, 最新价在此之上\n",
-      "        - 21周线: 57.18, 最新价在此之上\n",
-      "        - 60周线: 42.69, 最新价在此之上\n",
-      "        \n",
-      "\n",
-      "        15:00:00: DR中科曙(603019), 最新价40.83, 处于4线上方\n",
-      "        - 21日线:33.74, 最新价在此之上\n",
-      "        - 60日线: 33.60, 最新价在此之上\n",
-      "        - 21周线: 31.55, 最新价在此之上\n",
-      "        - 60周线: 28.26, 最新价在此之上\n",
-      "        \n",
-      "\n",
-      "        15:00:00: 诺力股份(603611), 最新价20.1, 处于4线上方\n",
-      "        - 21日线:17.59, 最新价在此之上\n",
-      "        - 60日线: 18.41, 最新价在此之上\n",
-      "        - 21周线: 17.89, 最新价在此之上\n",
-      "        - 60周线: 17.24, 最新价在此之上\n",
-      "        \n",
-      "\n",
-      "        15:00:00: 金证股份(600446), 最新价17.7, 处于1线上方\n",
-      "        - 21日线:17.29, 最新价在此之上\n",
-      "        - 60日线: 18.56, 最新价在此下方\n",
-      "        - 21周线: 19.30, 最新价在此下方\n",
-      "        - 60周线: 20.56, 最新价在此下方\n",
-      "        \n",
-      "\n",
-      "        15:00:00: 华友钴业(603799), 最新价37.79, 处于3线上方\n",
-      "        - 21日线:33.81, 最新价在此之上\n",
-      "        - 60日线: 37.24, 最新价在此之上\n",
-      "        - 21周线: 38.11, 最新价在此下方\n",
-      "        - 60周线: 29.83, 最新价在此之上\n",
-      "        \n",
-      "\n",
-      "        15:00:03: 长亮科技(300348), 最新价25.94, 处于4线上方\n",
-      "        - 21日线:24.75, 最新价在此之上\n",
-      "        - 60日线: 24.90, 最新价在此之上\n",
-      "        - 21周线: 24.16, 最新价在此之上\n",
-      "        - 60周线: 18.98, 最新价在此之上\n",
-      "        \n",
-      "\n",
-      "        15:00:03: 赢时胜(300377), 最新价10.45, 处于1线上方\n",
-      "        - 21日线:10.40, 最新价在此之上\n",
-      "        - 60日线: 11.12, 最新价在此下方\n",
-      "        - 21周线: 11.26, 最新价在此下方\n",
-      "        - 60周线: 11.69, 最新价在此下方\n",
-      "        \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def wechatMsg(msg,wechatkey):\n",
+    "    env_dist = os.environ\n",
+    "    # key1 = env_dist.get('wechat_key1')  # John\n",
+    "    # key2 = env_dist.get('wechat_key2') # Shin\n",
+    "    # keys = [key1,key2]\n",
+    "    params = {'text':'股价4线提示','desp':f'{msg}'}\n",
+    "    url = f'http://sc.ftqq.com/{key}.send'\n",
+    "    requests.get(url,params = params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mystocks = ['300136.SZ','300618.SZ','300496.SZ','603019.SH','603611.SH','600446.SH','603799.SH','300348.SZ','300377.SZ']\n",
+    "\n",
+    "msg_ls = []\n",
     "for stock in mystocks:\n",
     "    mystock = stock_alert(stock)\n",
-    "    print(mystock.print_info())"
+    "    print_info = mystock.print_info()\n",
+    "    msg_ls.append(print_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg = '\\n'.join(msg_ls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wechatMsg(msg,wechatkey)"
    ]
   }
  ],
