--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "def wechatMsg(msg,wechatkey):\n",
-    "    env_dist = os.environ\n",
+    "#     env_dist = os.environ\n",
     "    # key1 = env_dist.get('wechat_key1')  # John\n",
     "    # key2 = env_dist.get('wechat_key2') # Shin\n",
     "    # keys = [key1,key2]\n",
