--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "    # key2 = env_dist.get('wechat_key2') # Shin\n",
     "    # keys = [key1,key2]\n",
     "    params = {'text':'股价4线提示','desp':f'{msg}'}\n",
-    "    url = f'http://sc.ftqq.com/{key}.send'\n",
+    "    url = f'http://sc.ftqq.com/{wechatkey}.send'\n",
     "    requests.get(url,params = params)"
    ]
   },
