--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "import pandas as pd\n",
     "import tushare as ts\n",
-    "import sys"
+    "import sys\n",
+    "import requests"
    ]
   },
   {
