--- a/real_time_stock_info.ipynb
+++ b/real_time_stock_info.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,12 +94,27 @@
     "        ma_info = data_60week.iloc[0].to_dict()\n",
     "        ma_ls = [ma_info['ma21'],ma_info['ma60'],ma_info['ma21_week'],ma_info['ma60_week']]\n",
     "        flag_ls = [float(real_info['price']) >= i for i in ma_ls]\n",
-    "        mark_ls = ['red' if flag  else 'green' for flag in flag_ls] \n",
-    "        print_info = f'{real_info[\"time\"]}|{real_info[\"name\"]}({real_info[\"code\"]})|{real_info[\"price\"]}|处于{sum(flag_ls)}线上方|<font color={mark_ls[0]}>{ma_info[\"ma21\"]:.2f}</font>|<font color={mark_ls[1]}>{ma_info[\"ma60\"]:.2f}</font>|<font color={mark_ls[2]}>{ma_info[\"ma21_week\"]:.2f}</font>|<font color={mark_ls[3]}>{ma_info[\"ma60_week\"]:.2f}</font>'\n",
-    "        #         print(print_info)\n",
+    "#         mark_ls = ['upper' if flag  else 'down' for flag in flag_ls] \n",
+    "        mark_ls = ['最新价在此上方' if flag  else '最新价在此下方' for flag in flag_ls]\n",
+    "        print_info = f'''\n",
+    "        {real_info[\"time\"]}: {real_info[\"name\"]}({real_info[\"code\"]}), 最新价{real_info[\"price\"]}, 处于{sum(flag_ls)}线上方\\n\n",
+    "        - 21日线:{ma_info[\"ma21\"]:.2f}, {mark_ls[0]}\\n\n",
+    "        - 60日线: {ma_info[\"ma60\"]:.2f}, {mark_ls[1]}\\n\n",
+    "        - 21周线: {ma_info[\"ma21_week\"]:.2f}, {mark_ls[2]}\\n\n",
+    "        - 60周线: {ma_info[\"ma60_week\"]:.2f}, {mark_ls[3]}\\n\n",
+    "        '''\n",
+    "\n",
+    "#         print_info = f'{real_info[\"time\"]}, {real_info[\"name\"]}({real_info[\"code\"]}), 最新价{real_info[\"price\"]}, 处于{sum(flag_ls)}线上方\\n\\n21日线|60日线|21周线|60周线\\n---|---|---|---\\n{ma_info[\"ma21\"]:.2f}|{ma_info[\"ma60\"]:.2f}|{ma_info[\"ma21_week\"]:.2f}|{ma_info[\"ma60_week\"]:.2f}'\n",
     "        return print_info\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -119,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,14 +143,14 @@
     "    # key1 = env_dist.get('wechat_key1')  # John\n",
     "    # key2 = env_dist.get('wechat_key2') # Shin\n",
     "    # keys = [key1,key2]\n",
-    "    params = {'text':'股价4线提示','desp':f'<font color=red>红色</font>表示处于最新价下方，<font color=green>绿色</font>表示处于最新价上方\\n{msg}'}\n",
+    "    params = {'text':'股价4线提示','desp':f'<font color=red>红色</font>表示处于最新价下方，<font color=green>绿色</font>表示处于最新价上方\\n\\n{msg}'}\n",
     "    url = f'http://sc.ftqq.com/{wechatkey}.send'\n",
     "    requests.get(url,params = params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,13 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
-    "header = '时间|名称|最新价|4线位置|21日线|60日线|21周线|60周线\\n---|---|---|---|---|---|---|---'\n",
+    "# header = '时间|名称|最新价|4线位置|21日线|60日线|21周线|60周线\\n---|---|---|---|---|---|---|---'\n",
     "\n",
-    "msg = header +'\\n' + '\\n'.join(msg_ls)"
+    "msg = '\\n\\n'.join(msg_ls)"
    ]
   },
   {
